# cauchy

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  cargo.toml  math.md
cauchy-core/: Cargo.toml
cauchy-core/src/: daemon.rs  lib.rs
cauchy-core/src/crypto/: mod.rs  util.rs
cauchy-core/src/crypto/hashes/: blake2b.rs  mod.rs
cauchy-core/src/crypto/signatures/: ecdsa.rs
cauchy-core/src/crypto/sketches/: dummy_sketch.rs  iblt.rs  mod.rs  odd_sketch.rs
cauchy-core/src/db/: mod.rs  mongodb.rs  rocksdb.rs  storing.rs
cauchy-core/src/ego/: ego.rs  mod.rs  peer_ego.rs
cauchy-core/src/net/: connections.rs  heartbeats.rs  messages.rs  mod.rs  peers.rs  reconcile_status.rs  rpc_messages.rs  rpc_server.rs
cauchy-core/src/primitives/: access_pattern.rs  act.rs  arena.rs  ego.rs  mempool.rs  mod.rs  status.rs  transaction.rs  tx_pool.rs  varint.rs  work.rs  work_site.rs
cauchy-core/src/stage/: mod.rs
cauchy-core/src/state/: mod.rs  spend_state.rs  state.rs
cauchy-core/src/tests/: byte_op_tests.rs  db_tests.rs  hash_tests.rs  mod.rs  signature_tests.rs  sketch_tests.rs  transaction_state_tests.rs  transaction_tests.rs  varint_tests.rs
cauchy-core/src/tests/crypto/: hash_tests.rs  mod.rs  signature_tests.rs  sketch_tests.rs
cauchy-core/src/tests/primitives/: mempool_tests.rs  mod.rs  transaction_tests.rs  tx_pool_tests.rs  varint_tests.rs
cauchy-core/src/tests/utils/: byte_op_tests.rs  mod.rs
cauchy-core/src/tests/vm/: mod.rs  test_simple.rs
cauchy-core/src/tests/vm/scripts/: auxsend  auxsend.S  basic_store  basic_store.c  dummy  dummy.S  ecdsa  make_ecdsa.sh  make_sha256.sh  malloc_test.c  sha256  sha256.c  syscall  syscall.c  syscall_m  syscall_min  syscall_minimal.S  syscall_minimal.c  vm.h
cauchy-core/src/tests/vm/scripts/contracts/: build.sh  gas  gas.c  gas_msg.c  gas_msg.h  utils.c  utils.h
cauchy-core/src/tests/vm/scripts/contracts/tests/: build_tests_and_run.sh  safemath_tests  safemath_tests.c
cauchy-core/src/tests/vm/scripts_rust/: Cargo.toml
cauchy-core/src/tests/vm/scripts_rust/.cargo/: config
cauchy-core/src/tests/vm/scripts_rust/src/: main.rs
cauchy-core/src/utils/: byte_ops.rs  constants.rs  errors.rs  logging.rs  macros.rs  mining.rs  mod.rs  parsing.rs  serialisation.rs  timing.rs
cauchy-core/src/vm/: mod.rs  performance.rs  session.rs
cauchy-rpc/: Cargo.toml
cauchy-rpc/clients/: tools.py
cauchy-rpc/clients/python/: native_rpc.py  tools.py  transaction.py
cauchy-rpc/src/: lib.rs
cauchy-rpc/src/native/: interface.rs  messages.rs
cauchy-stage/: Cargo.toml
cauchy-stage/src/: lib.rs
cauchy-vm/: Cargo.toml  sysdump.memoryz
cauchy-vm/ckb-vm/src/: machine.rs
cauchy-vm/ckb-vm/src/memory/: sparse.rs
cauchy-vm/scripts/: 0ECE6BA565D32F43A5A2E5AED2E39F0359084A88A99D1CF1BBE91E6F4315D0DF  ecc.c  ecdsa  sha256  vm.h  vm_utils.h
cauchy-vm/src/: lib.rs  main.rs  performance.rs  vm.rs
cauchy-vm/src/tests/: test_simple.rs
cauchy-vm/src/tests/scripts/: auxsend  auxsend.S  basic  basic_store  basic_store.c  ecdsa  ecdsa.c  make_ecdsa.sh  malloc_test  malloc_test.c  recv_then_sends_to_bob  recv_then_sends_to_bob.c  sends_to_alice  sends_to_alice.c  syscall  syscall.c  syscall_m.c  syscall_min  syscall_minimal.S  vm.h
cauchy-vm/src/tests/scripts/contracts/: gas  gas.c
cauchy-vm/src/tests/scripts_rust/: Cargo.toml
cauchy-vm/src/tests/scripts_rust/src/: main.rs
cauchy-vm/src/vmsnapshot/: mod.rs
cauchy-vm/tests/: build_contract.sh  ecdsa_test  freeze  freeze.Sbak  freeze.c  sha256.c  sha256_basic.c  simple_contract.cpp  simple_contract.h  simple_contract_call  simple_contract_call.c  syscalls2  syscalls2.S  syscalls2.c  syscalls2_noatoi.S  time  vm.h
ch-vm/: Cargo.toml
ch-vm/scripts/: ecdsa  ecdsa.c  sha256  vm.h
ch-vm/src/: main.rs  vm.rs
ch-vm/tests/: build.sh  ecdsa_test  ecdsa_test.c  ecdsa_test.tgz  minimal.c  sha256  sha256.c  sha256_basic  simple  simple.S  simple.c  simple.tgz  syscalls  syscalls.S  syscalls.c  syscalls.s  syscalls2  syscalls2.c  time.c  vm.h
ch-vm/tests/backup/: sha256.S
ckb-vm/src/: machine.rs
cli/: cli.py  native_rpc.py
core/: README.md
core/cli/: cli.py
core/src/: daemon.rs  main.rs
core/src/consensus/: valiatation.rs
core/src/crypto/: mod.rs  util.rs
core/src/db/: mod.rs
core/src/net/: connections.rs  heartbeats.rs  messages.rs  rpc_messages.rs
core/src/primitives/: arena.rs  mod.rs  status.rs  varint.rs
core/src/state/: spend_state.rs  state.rs
core/src/test/: sketch_tests.rs
core/src/utils/: byte_ops.rs  timing.rs
scripts/: 000102030405060708090A0B0C0D0E0F101112131415161718191A1B1C1D1E1F  vm.h
scripts/tinycrypt/: ecc.h
src/: daemon.rs  main.rs  vm.rs
src/consensus/: arena.rs  mod.rs  peer.rs  status.rs  valiatation.rs
src/crypto/: mod.rs  util.rs
src/crypto/hashes/: blake2b.rs  mod.rs  odd_sketch.rs  oddsketch.rs
src/crypto/signatures/: ecdsa.rs  schnorr.rs
src/crypto/sketches/: iblt.rs  mod.rs  odd_sketch.rs
src/db/: memcache.rs  mod.rs  rocksdb.rs
src/net/: connections.rs  heartbeats.rs  lobby.rs  messages.rs  mod.rs
src/primitives/: arena.rs  instruction.rs  instruction_set.rs  mod.rs  pow.rs  script.rs  status.rs  transaction.rs  transaction_state.rs  varint.rs  work_site.rs
src/test/: byte_op_tests.rs  db_tests.rs  hash_tests.rs  signature_tests.rs  sketch_tests.rs  transaction_state_tests.rs  transaction_tests.rs
src/tests/: test_byte_tools.rs  test_db.rs  test_hash.rs  test_script.rs  test_transaction.rs  test_transaction_states.rs  test_varint.rs
src/utils/: byte_ops.rs  constants.rs  hash.rs  mining.rs  mod.rs  serialisation.rs  timing.rs
src/vmsnapshot/: mod.rs
tests/: ecc.c  freeze.c  freeze_call.c  simple_contract.c  simple_contract_call  simple_contract_call.c  simple_contract_cpp  vm.h
tests/backup/: sha256  sha256.c
vm/: .gitignore  Cargo.toml
vm/scripts/: 12DD9774CC96E18B5B1B5D4A4B1E0724C4B3E3F37A3EED1AF6A1DAC7CFDBC3E3
vm/src/: main.rs
vm/tests/: build.sh  freeze.S  freeze_call  minimal.S  sha256.S  sha256.tgz  simple.c  simple.tgz  syscalls  syscalls2  utils.c
(+3 files in other folders)
