[package]
name = "cauchy"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>", "Chris Novick <c.r.novick@protonmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/cauchyteam/cauchy"
edition = "2018"

[workspace]

members = [
  "./",
  "./cauchy-core",
  "./cauchy-vm",
]

[dependencies]
mongodb = "*"
libc = "*"
bytes = "*"
dirs = "*"
blake2 = "*"
rand = "*"
tokio = "*"
bus = "*"
futures = "*"

core = { package = "cauchy-core", version = "*", path = "cauchy-core" }
stage = { package = "cauchy-stage", version = "*", path = "cauchy-stage" }
vm = { package = "cauchy-vm", version = "*", path = "cauchy-vm" }

[dependencies.secp256k1]
version = "*"
default-features = false 
features = ["rand", "serde"]