[package]
name = "cauchy-core"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>", "Chris Novick <c.r.novick@protonmail.com>"]
edition = "2018"

[dependencies]
mongodb = "*"
bson = "*"
libc = "*"
bytes = "*"
dirs = "*"
blake2 = "*"
rand = "*"
tokio = "*"
bus = "*"
futures = "*"
failure = "*"
toml = "*"
lazy_static = "*"
serde_derive = "*"
serde = "*"
itertools = "*"

[dependencies.secp256k1]
version = "*"
default-features = false 
features = ["rand", "serde"]