[package]
name = "cauchy-core"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>", "Chris Novick <c.r.novick@protonmail.com>"]
edition = "2018"

[dependencies]
mongodb = "*"
bson = "*"
libc = "*"
bytes = "*"
dirs = "*"
blake2 = "*"
rand = "*"
tokio = "*"
tokio-threadpool = "*"
bus = "*"
futures = "*"
failure = "*"
toml = "*"
lazy_static = "*"
serde_derive = "*"
serde = "*"
itertools = "*"
log = "*"
ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm", rev="1e52302" }
chrono = "*"
colored = "*"

[dependencies.secp256k1]
version = "*"
default-features = false 
features = ["rand", "serde"]

[dev-dependencies]
hex = "*"