[package]
name = "cauchy-rpc"
version = "0.1.0"
authors = ["Harry <hlbarber93@gmail.com>", "Chris Novick <c.r.novick@protonmail.com>"]
edition = "2018"

[dependencies]
core = { package = "cauchy-core", version = "*", path = "../cauchy-core" }
bytes = "*"
failure = "*"
log = "*"
tokio = "*"
futures = "*"
bson = "*"

[features]
native-rpc = []
json-rpc = []
rest-rpc = []
g-rpc = []