[package]
name = "cauchy-vm"
version = "0.1.1"
authors = ["Harry <hlbarber93@gmail.com>", "Chris Novick <c.r.novick@protonmail.com>"]
edition = "2018"

[dependencies]
# ckb-vm = { git = "https://github.com/nervosnetwork/ckb-vm", rev="1e52302" }
ckb-vm = { path = "./ckb-vm"}
rocksdb = "*"
core = { package = "cauchy-core", version = "*", path = "../cauchy-core" }
bytes = "*"