[package]
name = "scripts_rust"
version = "0.1.0"
authors = ["Bluesun <c.r.novick@gmail.com>"]
edition = "2018"

[dependencies]
# compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }


[workspace]
members = []

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic